frontend/src/components/post-card/PostCard.module.scss
@import './../../styles/colors.module';

.card {
	&__box {
		justify-content: space-between;
		align-items: center;
		margin: 1em;
		width: 80%;
		cursor: pointer;

		@media (min-width: 768px) {
			width: 35%;
			height: 450px;
		}
		@media (min-width: 1200px) {
			width: 25%;
		}

		&:hover .card__text-title {
			color: $secondary-font-color;
		}
		&:hover .card__text-content {
			color: $primary-font-color;
		}
	}
	&__img {
		display: flex;
		justify-content: center;
		align-items: center;
		width: 100%;
		@media (min-width: 500px) {
			height: 300px;
		}

		@media (min-width: 768px) {
			height: 150px;
		}

		img {
			width: 100%;
			height: 100%;
			border-radius: 20px;
			object-fit: cover;
			
			@media (min-width: 768px) {
				max-width: 200px;
				max-height: auto;
			}
		}
	}
	&__text {
		display: flex;
		flex-direction: column;
		justify-content: space-evenly;
		margin-top: 1em;
		width: 100%;
		height: 70%;

		@media (min-width: 768px) {
			height: 250px;
		}

		&-title {
			text-align: center;
			margin-bottom: 0.5em;
			transition: color 0.6s;
		}
		hr {
			border-color: $secondary-font-color;
		}
		&-content {
			margin-top: 1em;
			color: #b5bdc1;
			transition: color 0.6s;
		}
		&-bottom {
			display: flex;
			justify-content: space-around;
			align-items: center;
			margin-top: 1em;
		}
	}

	&__link {
		text-decoration: none;
		color: $primary-font-color;
	}
}

.list {
	width: 60%;
}

